// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`private - LN - acumulado - Author - wikiAuthor Test de snapshot Bio Author 1`] = `
<section
  class="mod-wikiauthor  "
>
  <div
    class="row"
  >
    <div
      class="col-12 col-desksm-4"
    >
      <figure
        class="mod-figure --horizontal"
      >
        <div
          class="mod-picture "
        >
          <img
            alt="Imagen de Autor"
            class="com-image "
            loading="lazy"
            src="https://bucket2.glanacion.com/anexos/fotos/95/3037695h320.png"
            srcset="https://bucket2.glanacion.com/anexos/fotos/95/3037695h320.png"
          />
        </div>
      </figure>
    </div>
    <div
      class="col-12 col-desksm-8"
    >
      <div
        class="com-container  --info"
      >
        <h2
          class="com-title --l"
        >
          Joaquín Morales Solá
        </h2>
        <span
          class="com-text --threexs --profesion"
        />
        <div
          class="com-container  --contact"
        >
          <a
            class="com-link"
            href="https://google.com"
          >
            https://google.com
          </a>
        </div>
        <p
          class="com-paragraph   --threexs"
        >
          Ejerce el periodismo desde los 16 años cuando ingresó al
                diario La Gaceta de Tucumán. En 1975, Clarín lo convocó para
                ser prosecretario de la sección Política. Durante 12 años
                fue segundo jefe de Redacción y autor de la columna política
                dominical de ese diario. Fue columnista político del
                noticiero de Telefé y del programa "Tiempo Nuevo", de
                Bernardo Neustadt. Durante 1997, condujo "Dos en la noticia"
                junto con Magdalena Ruiz Guiñazú, por el ex Canal 9.
                Actualmente es columnista político del diario LA NACION. En
                1990, el gobierno de Italia lo condecoró con la Orden al
                Mérito de la República Italiana. Posteriormente, en 1992,
                España lo distinguió con la Orden de Isabel la Católica. En
                1998, recibió la Orden Nacional al Mérito que entrega la
                república de Francia. En su último libro, "Sin excusas"
                (Sudamericana), Morales Solá revela diálogos con el ex
                vicepresidente Chacho Alvarez, sobre la trama secreta de los
                sobornos en el Senado, las causas de su renuncia y los
                errores que condujeron al fracaso de la Alianza.
        </p>
        <div
          class="com-container  "
        >
          <dl
            class="mod-descriptionlist "
          >
            <dt
              class="com-title --threexs "
            >
              Educación
            </dt>
            <dd
              class="com-itemlist  --threexs"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet --sm"
                />
              </div>
              Periodismo, Universidad de Buenos Aires, 1989.
            </dd>
            <dd
              class="com-itemlist  --threexs"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet --sm"
                />
              </div>
              Periodismo, Universidad de Buenos Aires, 1995.
            </dd>
          </dl>
        </div>
        <div
          class="com-container  "
        >
          <dl
            class="mod-descriptionlist "
          >
            <dt
              class="com-title --threexs "
            >
              Reconocimientos
            </dt>
            <dd
              class="com-itemlist  --threexs"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet --sm"
                />
              </div>
              Condecorado por el gobierno de la República de Brasil con la Orden de Río Branco, 2002.
            </dd>
            <dd
              class="com-itemlist  --threexs"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet --sm"
                />
              </div>
              Condecorado por el gobierno de la República de Brasil con la Orden de Río Branco, 2002.
            </dd>
          </dl>
        </div>
        <div
          class="com-container  "
        >
          <dl
            class="mod-descriptionlist --idiomas"
          >
            <dt
              class="com-title --threexs --idiomas"
            >
              Idiomas:
            </dt>
            Ingles, Frances
          </dl>
        </div>
        <div
          class="com-container  "
        >
          <dl
            class="mod-descriptionlist --membresia"
          >
            <dt
              class="com-title --threexs --membresia"
            >
              Membresías profesionales:
            </dt>
            Academia de Periodismo.
          </dl>
        </div>
        <div
          class="com-container  "
        >
          <dl
            class="mod-descriptionlist "
          >
            <dt
              class="com-title --threexs "
            >
              Publicaciones
            </dt>
            <dd
              class="com-itemlist  --threexs"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet --sm"
                />
              </div>
              <a
                class="com-link"
                href="https://google.com"
              >
                Carlos Pagni en Odisea Argentina
              </a>
              , Editorial
            </dd>
          </dl>
        </div>
        <div
          class="com-container  "
        >
          <dl
            class="mod-descriptionlist "
          >
            <dt
              class="com-title --threexs "
            >
              Podscat
            </dt>
            <dd
              class="com-itemlist  --threexs"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet --sm"
                />
              </div>
              <a
                class="com-link"
                href="http://google.com"
              >
                Un podcast
              </a>
            </dd>
            <dd
              class="com-itemlist  --threexs"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet --sm"
                />
              </div>
              <a
                class="com-link"
                href="http://google.com"
              >
                Dos podcast
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="col-12"
    >
      <div
        class="com-container  --socialicons"
      >
        <h4
          class="com-title --threexs"
        >
          Conectar
        </h4>
        <ul
          class="com-unordered "
        >
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-twitter --xl  "
              />
              <span
                class="com-text --threexs "
              >
                twitter
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-facebook --xl  "
              />
              <span
                class="com-text --threexs "
              >
                facebook
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-youtube --xl  "
              />
              <span
                class="com-text --threexs "
              >
                youtube
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-instagram --xl  "
              />
              <span
                class="com-text --threexs "
              >
                instagram
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-linkedin --xl  "
              />
              <span
                class="com-text --threexs "
              >
                linkedin
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-rss --xl  "
              />
              <span
                class="com-text --threexs "
              >
                rss
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-medium --xl  "
              />
              <span
                class="com-text --threexs "
              >
                medium
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-reddit --xl  "
              />
              <span
                class="com-text --threexs "
              >
                reddit
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-pinterest --xl  "
              />
              <span
                class="com-text --threexs "
              >
                pinterest
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-soundcloud --xl  "
              />
              <span
                class="com-text --threexs "
              >
                soundcloud
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-snapchat --xl  "
              />
              <span
                class="com-text --threexs "
              >
                snapchat
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-whatsapp --xl  "
              />
              <span
                class="com-text --threexs "
              >
                whatsapp
              </span>
            </a>
          </li>
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-tumblr --xl  "
              />
              <span
                class="com-text --threexs "
              >
                tumblr
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</section>
`;

exports[`private - LN - acumulado - Author - wikiAuthor Test de snapshot Bio Author Sin muchos datos 1`] = `
<section
  class="mod-wikiauthor  "
>
  <div
    class="row"
  >
    <div
      class="col-12 col-desksm-8"
    >
      <div
        class="com-container  --info"
      >
        <h2
          class="com-title --l"
        >
          Joaquín Morales Solá
        </h2>
        <span
          class="com-text --threexs --profesion"
        />
        <div
          class="com-container  --contact"
        >
          <a
            class="com-link"
            href="https://google.com"
          >
            https://google.com
          </a>
        </div>
        <p
          class="com-paragraph   --threexs"
        >
          Ejerce el periodismo desde los 16 años cuando ingresó al
                diario La Gaceta de Tucumán. En 1975, Clarín lo convocó para
                ser prosecretario de la sección Política. Durante 12 años
                fue segundo jefe de Redacción y autor de la columna política
                dominical de ese diario.
        </p>
        <div
          class="com-container  "
        >
          <dl
            class="mod-descriptionlist --idiomas"
          >
            <dt
              class="com-title --threexs --idiomas"
            >
              Idiomas:
            </dt>
            Ingles, Frances
          </dl>
        </div>
        <div
          class="com-container  "
        >
          <dl
            class="mod-descriptionlist "
          >
            <dt
              class="com-title --threexs "
            >
              Podscat
            </dt>
            <dd
              class="com-itemlist  --threexs"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet --sm"
                />
              </div>
              <a
                class="com-link"
                href="http://google.com"
              >
                Dos podcast
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="col-12"
    >
      <div
        class="com-container  --socialicons"
      >
        <h4
          class="com-title --threexs"
        >
          Conectar
        </h4>
        <ul
          class="com-unordered "
        >
          <li
            class="com-li  "
          >
            <a
              class="com-link --sociallist"
              href="@moralessola"
            >
              <div
                class="com-bullet"
              >
                <i
                  class="com-icon bullet icon-bullet  --xs "
                  style="color:#cccccc"
                />
              </div>
              <i
                class="com-icon icon-twitter --xl  "
              />
              <span
                class="com-text --threexs "
              >
                twitter
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</section>
`;
